--- a/KnockoutSamples/KnockoutSamples.csproj
+++ b/KnockoutSamples/KnockoutSamples.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="default.aspx" />
     <Content Include="packages\knockoutjs.3.1.0\Content\Scripts\knockout-3.1.0.debug.js" />
     <Content Include="packages\knockoutjs.3.1.0\Content\Scripts\knockout-3.1.0.js" />
     <Content Include="Scripts\knockout-3.1.0.debug.js" />
@@ -64,6 +65,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="default.aspx.cs">
+      <DependentUpon>default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="default.aspx.designer.cs">
+      <DependentUpon>default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
